# sup-fastapi-boilerplate

./: .env.sample  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e166e3d60826_added_status_field_in_account_access_.py  f5e721a2fdc7_added_products_table.py
app/: main.py  pre_start.py
app/api/: deps.py
app/api/v1/: api.py
app/core/: config.py
app/crud/: __init__.py  account_access_point_crud.py  account_facilities_crud.py  facility_crud.py  product_crud.py  user_device_crud.py  user_role_crud.py
app/db/: base.py  init_db.py
app/models/: account.py  account_access_point.py  account_facilities.py  application.py  facility.py  product.py  role.py  user.py  user_device.py  user_role.py
app/schemas/: __init__.py  account.py  account_access_point.py  account_facilities.py  application.py  device.py  facility.py  order.py  order_item.py  product.py  token.py  user.py  user_role.py
app/utils/: indexes.py  measurements.py  misc.py  packets.py
backend/: .gitignore  Dockerfile  alembic.ini  start_stop.py  startup.sh
backend/alembic/versions/: 18337d71c2eb_added_facility_table.py  1d6e843867c7_added_account_facilities_table.py  24bdb53d83ac_update_add_type_to_product_table.py  2b27db73086a_added_icon_url_field_to_facilites_and_.py  596af22f87fb_add_field_to_products.py  (+7 more)
backend/app/crud/: base.py  (+7 more)
data/postgres/: postmaster.pid
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: configure.json  index.html
frontend/src/: .env  App.js  config.js  home.js  index.js  index.scss
nginx/: default.conf
(+243 files in other folders)
