[tool.poetry]
name = "dolcera-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
alembic = "^1.10.2"
inflect = "^6.0.2"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.6"
tenacity = "^8.2.2"
psycopg2 = "^2.9.6"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
